--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,17 @@
 </head>
 <body>
   <main>
-    <div id="slider" class="slider">
-      <div class="slider-inner">
-        <div id="slider-content">
-          <h1 class="text">OUR VISION</h1>
-          <p>不動産事業を通じて関わる全ての方々への幸福を追求し,<br />
-          信頼されるカンパニーを目指します。</p>                    
+        <div class="slider-content">
+                             
+          <div class="canvas-bg-blur"></div>
+          <div class="canvas-bg-dist">
+            <div class="hero-vision">
+              <h1 class="hero-title">OUR VISION</h1>
+              <p class="hero-text">不動産事業を通じて関わる全ての方々への幸福を追求し,<br />
+              信頼されるカンパニーを目指します。</p> 
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-    <!-- <canvas class="canvas-wave">
-
-    </canvas> -->
   </main>
 </body>
 </html>
