--- a/src/index.html
+++ b/src/index.html
@@ -7,18 +7,78 @@
   <title>Document</title>
 </head>
 <body>
-  <main>
-        <div class="slider-content">
-                             
-          <div class="canvas-bg-blur"></div>
-          <div class="canvas-bg-dist">
-            <div class="hero-vision">
-              <h1 class="hero-title">OUR VISION</h1>
-              <p class="hero-text">不動産事業を通じて関わる全ての方々への幸福を追求し,<br />
-              信頼されるカンパニーを目指します。</p> 
+  <div class="body-inner">
+    <div class="menu-bg">
+      <nav>
+        <ul>
+          <li>
+            <a class="text-stroke-fill-ltr" data-fill="TOP">TOP
+              <div class="hover-reveal image01">
+                <img src="./assets/images/menu/menu-top.jpg" alt="" class="hidden-img">
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="text-stroke-fill-ltr" data-fill="OUR BUSINESS">OUR BUSINESS
+              <div class="hover-reveal image01">
+                <img src="./assets/images/menu/menu-ourbusiness.jpg" alt="" class="hidden-img">
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="text-stroke-fill-ltr" data-fill="SALES RECORDS">SALES RECORDS
+              <div class="hover-reveal image01">
+                <img src="./assets/images/menu/menu-sales.jpeg" alt="" class="hidden-img">
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="text-stroke-fill-ltr" data-fill="ABOUT US">ABOUT US
+              <div class="hover-reveal image01">
+                <img src="./assets/images/menu/menu-about.jpg" alt="" class="hidden-img">
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="text-stroke-fill-ltr" data-fill="CAREERS">CAREERS
+              <div class="hover-reveal image01">
+                <img src="./assets/images/menu/menu-careers.jpg" alt="" class="hidden-img">
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="text-stroke-fill-ltr" data-fill="GET IN TOUCH">GET IN TOUCH
+              <div class="hover-reveal image01">
+                <img src="./assets/images/menu/menu-get.jpeg" alt="" class="hidden-img">
+              </div>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <header>
+      <h1>
+        <img src="./assets/images/logo.svg" alt="TO PLACE株式会社">
+        TO PLACE
+      </h1>
+      <button class="menu-btn"></button>
+    </header>
+    <main>
+          <div class="slider-content">                         
+            <div class="canvas-bg-blur"></div>
+            <div class="canvas-bg-dist">
+              <div class="hero-vision">
+                <h1 class="hero-title">OUR VISION</h1>
+                <p class="hero-text">不動産事業を通じて関わる全ての方々への幸福を追求し,<br />
+                信頼されるカンパニーを目指します。</p> 
+              </div>
             </div>
           </div>
-        </div>
-  </main>
+          <div class="wave-content">
+            <h2 class="col-heading-text">後世へと受け継がれる<br>
+              価値ある不動産を提供</h2>
+          </div>
+    </main>
+  </div>
 </body>
 </html>
