--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,26 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="loader">
+    <div class="loader__bg"></div>
+    <div class="loader__bg"></div>
+    <div class="loader__bg"></div>
+    <div class="loader__bg"></div>
+    <div class="loader__bg"></div>
+    <div class="loader__bg"></div>
+    <div class="loader__bg"></div>
+    <div class="loader__bg"></div>
+    <div class="loader__bg"></div>
+    <div class="loader__bg"></div>
+    <div class="loader__bg"></div>
+    <div class="loader__bg"></div>
+    <div class="loader__bg"></div>
+    <div class="loader__bg"></div>
+    <div class="loader__bg"></div>
+    <div class="loader__bg"></div>
+    <div class="loader__bg"></div>
+    <div class="loader__bg"></div>
+  </div>
   <div class="body-inner">
     <div class="menu-bg">
       <nav>
@@ -65,8 +85,8 @@
     </header>
     <main>
           <div class="slider-content">                         
-            <div class="canvas-bg-blur"></div>
-            <div class="canvas-bg-dist">
+            <div class="canvas-bg-blur gs-anim"></div>
+            <div class="canvas-bg-dist gs-anim">
               <div class="hero-vision">
                 <h1 class="hero-title">OUR VISION</h1>
                 <p class="hero-text">不動産事業を通じて関わる全ての方々への幸福を追求し,<br />
