--- a/src/index.html
+++ b/src/index.html
@@ -85,8 +85,8 @@
     </header>
     <main>
           <div class="slider-content">                         
-            <div class="canvas-bg-blur gs-anim"></div>
-            <div class="canvas-bg-dist gs-anim">
+            <div class="canvas-bg-blur"></div>
+            <div class="canvas-bg-dist">
               <div class="hero-vision">
                 <h1 class="hero-title">OUR VISION</h1>
                 <p class="hero-text">不動産事業を通じて関わる全ての方々への幸福を追求し,<br />
