webpack設定　複数ページ作成

--- a/src/index.html
+++ b/src/index.html
@@ -32,35 +32,35 @@
       <nav>
         <ul>
           <li>
-            <a class="text-stroke-fill-ltr" data-fill="TOP">TOP
+            <a href="index.html" class="text-stroke-fill-ltr" data-fill="TOP">TOP
               <div class="hover-reveal image01">
                 <img src="./assets/images/menu/menu-top.jpg" alt="" class="hidden-img">
               </div>
             </a>
           </li>
           <li>
-            <a class="text-stroke-fill-ltr" data-fill="OUR BUSINESS">OUR BUSINESS
+            <a href="business.html" class="text-stroke-fill-ltr" data-fill="OUR BUSINESS">OUR BUSINESS
               <div class="hover-reveal image01">
                 <img src="./assets/images/menu/menu-ourbusiness.jpg" alt="" class="hidden-img">
               </div>
             </a>
           </li>
           <li>
-            <a class="text-stroke-fill-ltr" data-fill="SALES RECORDS">SALES RECORDS
+            <a href="sales.html" class="text-stroke-fill-ltr" data-fill="SALES RECORDS">SALES RECORDS
               <div class="hover-reveal image01">
                 <img src="./assets/images/menu/menu-sales.jpeg" alt="" class="hidden-img">
               </div>
             </a>
           </li>
           <li>
-            <a class="text-stroke-fill-ltr" data-fill="ABOUT US">ABOUT US
+            <a href="about.html" class="text-stroke-fill-ltr" data-fill="ABOUT US">ABOUT US
               <div class="hover-reveal image01">
                 <img src="./assets/images/menu/menu-about.jpg" alt="" class="hidden-img">
               </div>
             </a>
           </li>
           <li>
-            <a class="text-stroke-fill-ltr" data-fill="CAREERS">CAREERS
+            <a href="careers.html" class="text-stroke-fill-ltr" data-fill="CAREERS">CAREERS
               <div class="hover-reveal image01">
                 <img src="./assets/images/menu/menu-careers.jpg" alt="" class="hidden-img">
               </div>
