--- a/src/index.html
+++ b/src/index.html
@@ -85,9 +85,14 @@
     </header>
     <main>
           <div class="slider-content">                         
-            <div class="canvas-bg-blur"></div>
+            <div class="canvas-bg-blur">
+              <div class="overlay overlay-white"></div>
+              <div class="overlay overlay-red"></div>             
+            </div>
             <div class="canvas-bg-dist">
-              <div class="hero-vision">
+              <div class="overlay overlay-white2"></div>
+              <div class="overlay overlay-red2"></div>            
+              <div class="hero-vision">          
                 <h1 class="hero-title">OUR VISION</h1>
                 <p class="hero-text">不動産事業を通じて関わる全ての方々への幸福を追求し,<br />
                 信頼されるカンパニーを目指します。</p> 
