アニメーション修正

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="loader">
+    <div id="countdown"></div>
     <div class="loader__bg"></div>
     <div class="loader__bg"></div>
     <div class="loader__bg"></div>
