--- a/src/about.html
+++ b/src/about.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <meta name="description" content="ページの説明">
+  <meta name="keywords" content="キーワード1, キーワード2, キーワード3">
+  <meta name="author" content="著者名">
+  <meta name="robots" content="index, follow">
+  <!-- Facebook Meta Tags -->
+  <meta property="og:title" content="ページのタイトル">
+  <meta property="og:description" content="ページの説明">
+  <meta property="og:image" content="画像のURL">
+  <meta property="og:url" content="ページのURL">
+  <meta property="og:type" content="website">
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="ページのタイトル">
+  <meta name="twitter:description" content="ページの説明">
+  <meta name="twitter:image" content="画像のURL">
+  <!-- Canonical URL -->
+  <link rel="canonical" href="正規URL">
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="loader">
