--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <meta name="description" content="ページの説明">
+  <meta name="keywords" content="キーワード1, キーワード2, キーワード3">
+  <meta name="author" content="著者名">
+  <meta name="robots" content="index, follow">
+  <!-- Facebook Meta Tags -->
+  <meta property="og:title" content="ページのタイトル">
+  <meta property="og:description" content="ページの説明">
+  <meta property="og:image" content="画像のURL">
+  <meta property="og:url" content="ページのURL">
+  <meta property="og:type" content="website">
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="ページのタイトル">
+  <meta name="twitter:description" content="ページの説明">
+  <meta name="twitter:image" content="画像のURL">
+  <!-- Canonical URL -->
+  <link rel="canonical" href="正規URL">
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <div class="loader">
@@ -104,6 +123,29 @@
             <h2 class="col-heading-text">後世へと受け継がれる<br>
               価値ある不動産を提供</h2>
           </div>
+          <section class="news-section">
+            <h2>NEWS RELEASE</h2>
+            <ul class="news-list">
+              <li>
+                <img src="./assets/images/top/news-01.jpg" alt="">
+                <h3>プライバシポリシーの改訂</h3>
+                <p>24-03-12<span class="new">NEW</span>プライバシポリシーを一部、改訂しました。</p>
+                <hr>
+              </li>
+              <li>
+                <img src="./assets/images/top/news-01.jpg" alt="">
+                <h3>求人、積極採用中</h3>
+                <p>24-03-12<span class="new">NEW</span>求人情報を公開しました</p>
+                <hr>
+              </li>
+              <li>
+                <img src="./assets/images/top/news-01.jpg" alt="">
+                <h3>自社サイト公開のお知らせ</h3>
+                <p>24-03-01<span class="no-new">NEW</span>WEBサイトを公開しました。</p>
+                <hr>
+              </li>
+            </ul>
+          </section>
     </main>
   </div>
 </body>
