--- a/src/index.html
+++ b/src/index.html
@@ -141,7 +141,7 @@
               <li>
                 <img src="./assets/images/top/news-01.jpg" alt="">
                 <h3>自社サイト公開のお知らせ</h3>
-                <p>24-03-01<span class="no-new">NEW</span>WEBサイトを公開しました。</p>
+                <p>24-03-01<span class="no-new"></span>WEBサイトを公開しました。</p>
                 <hr>
               </li>
             </ul>
