spoylight他アニメーション修正

--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,8 @@
       </h1>
       <button class="menu-btn"></button>
     </header>
-    <main>
+    <main class="top-main">
+      <div class="light"></div>
           <div class="slider-content">                         
             <div class="canvas-bg-blur">
               <div class="overlay overlay-white"></div>
@@ -113,8 +114,8 @@
               <div class="overlay overlay-white2"></div>
               <div class="overlay overlay-red2"></div>            
               <div class="hero-vision">          
-                <h1 class="hero-title">OUR VISION</h1>
-                <p class="hero-text">不動産事業を通じて関わる全ての方々への幸福を追求し,<br />
+                <h1 class="hero-title white-outlined-text"><span class="white-outlined-text">O</span><span class="white-outlined-text">U</span><span class="white-outlined-text">R</span><span>&nbsp;</span><span class="white-outlined-text">V</span><span class="white-outlined-text">I</span><span class="white-outlined-text">S</span><span class="white-outlined-text">I</span><span class="white-outlined-text">O</span><span class="white-outlined-text">N</span></h1>
+                <p class="hero-text white-outlined-text">不動産事業を通じて関わる全ての方々への幸福を追求し,<br />
                 信頼されるカンパニーを目指します。</p> 
               </div>
             </div>
