アニメーション修正

--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,8 @@
             <div class="canvas-bg-dist">
               <div class="overlay overlay-white2"></div>
               <div class="overlay overlay-red2"></div>            
-              <div class="hero-vision">          
+              <div class="hero-vision">
+                <div class="hero-vision-bg"></div>          
                 <h1 class="hero-title white-outlined-text"><span class="white-outlined-text">O</span><span class="white-outlined-text">U</span><span class="white-outlined-text">R</span><span>&nbsp;</span><span class="white-outlined-text">V</span><span class="white-outlined-text">I</span><span class="white-outlined-text">S</span><span class="white-outlined-text">I</span><span class="white-outlined-text">O</span><span class="white-outlined-text">N</span></h1>
                 <p class="hero-text white-outlined-text">不動産事業を通じて関わる全ての方々への幸福を追求し,<br />
                 信頼されるカンパニーを目指します。</p> 
