カルーセル実装前

--- a/src/index.html
+++ b/src/index.html
@@ -148,6 +148,56 @@
               </li>
             </ul>
           </section>
+          <section class="ouebusiness-section">
+            <div class="ouebusiness-section-text">
+              <h2>OUR BUSINESS</h2>
+              <h3>不動産ディベロップメント事業</h3>
+              <p>渋谷区・港区・新宿区・中央区などの都心部を主軸とした<br>
+                東京２３区内において、不動産ディベロップメント事業を展開。<br>
+                近年上昇する不動産市場において、<br>
+                業界経験２０年以上のプロフェッショナルが<br>
+                マーケティングを行い、様々な不動産売買事例をもとに土地を取得。<br>
+                資産性の高い不動産を適正価格でお客様へ提供いたします。</p>
+                <div class="block-button ourbusiness-btn">
+                  <a class="block-button-link  button-effect" href="#" target="">
+                    <span>MORE</span>
+                    <span>>>></span>
+                  </a>
+                </div>
+            </div>
+            <img src="./assets/images/top/ourbusiness-hero.jpeg" alt="">
+          </section>
+          <section class="carousel-section">
+            <div class="carousel-container">
+              <h2>SALES RECORD</h2>
+              <p>弊社は、分譲販売において確かな実績を持っています。<br>
+                これまでの年月を通じて、手頃な価格のコミュニティ重視の開発まで、<br>
+                数多くのプロジェクトの販売を成功させてきました。</p>
+              <div class="owl-carousel owl-theme">
+                <div class="carousel-item">
+                  <div class="carousel-item__card">1</div>
+                </div>
+                <div class="carousel-item">
+                  <div class="carousel-item__card">2</div>
+                </div>
+                <div class="carousel-item">
+                  <div class="carousel-item__card">3</div>
+                </div>
+                <div class="carousel-item">
+                  <div class="carousel-item__card">4</div>
+                </div>
+                <div class="carousel-item">
+                  <div class="carousel-item__card">5</div>
+                </div>
+                <div class="carousel-item">
+                  <div class="carousel-item__card">6</div>
+                </div>
+                <div class="carousel-item">
+                  <div class="carousel-item__card">7</div>
+                </div>
+              </div>
+            </div>
+          </section>
     </main>
   </div>
 </body>
