TOPページPC微調整必要あり

--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
                 価値ある不動産を提供</h2>
             </div>
             <section class="news-section">
-              <h2>NEWS RELEASE</h2>
+              <h2 class="text-effect">NEWS RELEASE</h2>
               <ul class="news-list">
                 <li>
                   <img src="./assets/images/top/news-01.jpg" alt="">
@@ -150,9 +150,9 @@
             </section>
             <section class="ouebusiness-section">
               <div class="ouebusiness-section-text">
-                <h2>OUR BUSINESS</h2>
-                <h3>不動産ディベロップメント事業</h3>
-                <p>渋谷区・港区・新宿区・中央区などの都心部を主軸とした<br>
+                <h2 class="text-effect">OUR BUSINESS</h2>
+                <h3 class="text-effect">不動産ディベロップメント事業</h3>
+                <p class="text-effect">渋谷区・港区・新宿区・中央区などの都心部を主軸とした<br>
                   東京２３区内において、不動産ディベロップメント事業を展開。<br>
                   近年上昇する不動産市場において、<br>
                   業界経験２０年以上のプロフェッショナルが<br>
@@ -168,8 +168,8 @@
               <img src="./assets/images/top/ourbusiness-hero.jpeg" alt="">
             </section>
             <section class="carousel-section">
-                <h2>SALES RECORD</h2>
-                <p>弊社は、分譲販売において確かな実績を持っています。<br>
+                <h2 class="text-effect">SALES RECORD</h2>
+                <p class="text-effect">弊社は、分譲販売において確かな実績を持っています。<br>
                   これまでの年月を通じて、手頃な価格のコミュニティ重視の開発まで、<br>
                   数多くのプロジェクトの販売を成功させてきました。</p>
   
@@ -231,5 +231,48 @@
             <!-- video -->
           </div>
         </div>
+        <section class="careers-section">
+            <h2 class="text-effect">CAREERS</h2>
+            <p class="text-effect">情熱を燃やし、愛情を込めて、お客様の夢を叶える旅に共に歩む仲間を募集しています。<br>
+              あなたの熱意と創造力が、この不動産の世界に新たな価値をもたらすことを期待しています。<br>
+              私たちと一緒に、お客様の理想を形にし、心からの満足を実現しましょう。<br>
+              あなたのチャレンジを、ここで輝かせてください。</p>
+              <div class="block-button careers-btn">
+                <a class="block-button-link  button-effect" href="./careers.html" target="">
+                  <span>MORE</span>
+                  <span>>>></span>
+                </a>
+              </div>
+        </section>
+        <footer>
+          <a href="" data-letters="GET IN TOUCH" class="link-effect">GET IN TOUCH</a>
+          <section class="footer-section">
+            <section class="left-section">
+              <h2><img src="./assets/images/footer/footer-logo.png" alt=""></h2>
+              <a href="">プライバシーポリシー</a>
+              <p>&copy;TO PLACE株式会社</p>
+            </section>
+            <section class="right-section">
+              <dl>
+                <dt>事業内容</dt>
+                <dd>不動産ディベロップメント事業<br>
+                  不動産売買仲介事業
+                </dd>
+              </dl>
+              <dl>
+                <dt>宅建業免許</dt>
+                <dd>東京都知事（１）第１０９４０９号</dd>
+              </dl>
+              <dl>
+                <dt>所在地</dt>
+                <dd>東京都渋谷区恵比寿１－８－６　共同ビル７階</dd>
+              </dl>
+                <dl>
+                  <dt>代表番号</dt>
+                  <dd>０３－６８２４－６３６８</dd>
+                </dl>
+            </section>
+          </section>
+        </footer>
 </body>
 </html>
