--- a/src/index.html
+++ b/src/index.html
@@ -105,6 +105,10 @@
       </header>
       <main class="top-main">
         <div class="light"></div>
+        <div class="scrolldown-animation">
+          <h4>scroll</h4>
+          <div class="scrolldown-bar4"></div>
+        </div>
             <div class="slider-content">                         
               <div class="canvas-bg-blur">
                 <div class="overlay overlay-white"></div>
