--- a/src/sales.html
+++ b/src/sales.html
@@ -2,7 +2,6 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <meta name="description" content="ページの説明">
@@ -102,8 +101,107 @@
           </h1>
           <button class="menu-btn"></button>
         </header>
-        <main>
-            <h1>sales</h1>
+        <main class="top-business">
+          <div class="light2"></div>
+          <div class="business-hero">
+            <h2>SALES RECORD</h2>
+            <nav>
+              <ol class="breadcrumb">
+                <li><a href="./index.html">TOP</a></li>
+                <li>SALES RECORD</li>
+              </ol>
+            </nav>
+            <img src="./assets/images/sales/Group 19.png" alt="" />
+          </div>
+          <div class="business-info">
+            <h2>販売実績</h2>
+          </div>
+          <div class="container">
+            <section class="item">
+              <img src="./assets/images/sales/実績　日本橋久松町1000_F_495719911_sDr58fQLXDdjs2DHQughYJziQJKybiqv 1.jpg" alt="" class="hover-image">
+              <div class="item-text">
+                <h2>日本橋久松町 土地</h2>
+                <p>成約済／中央区／駅５分／ワイドスパン</p>
+                <p>「人形町」駅徒歩５分・複数路線利用可</p>
+                <p>久松小学校学区域</p>
+                <p>土地間口が広く開放感がある</p>
+                <p>下町と都会が共存した活気ある街並み</p>
+              </div>
+            </section>
+            <section class="item">
+              <img src="./assets/images/sales/実績　恵比寿南1000_F_431325995_Z8hxlHVGfteYss0BGKIMnvJ7K2i8klC9 1.jpg" alt=""　class="hover-image">
+              <div class="item-text">
+                <h2>恵比寿南３丁目 土地</h2>
+                <p>成約済／渋谷区／駅５分／高台</p>
+                <p>「代官山」「恵比寿」駅が徒歩５分</p>
+                <p>静かな高台の立地</p>
+                <p>コンビニや飲食店が立ち並ぶ駒沢通り至近</p>
+              </div>
+            </section>
+            <section class="item">
+              <img src="./assets/images/sales/実績　森下1000_F_185776202_5hr0iZc55gjBfdcN9bkdYnDjGZRk36Sz 1.jpg" alt="" class="hover-image">
+              <div class="item-text">
+                <h2>森下２丁目 戸建</h2>
+                <p>成約済／江東区／駅１分</p>
+                <p>「森下」駅徒歩１分</p>
+                <p>繁華街が近い・静かな立地</p>
+                <p>近くに緑道や神社があり風情がある街並み</p>
+              </div>
+            </section>
+            <section class="item">
+              <img src="./assets/images/sales/実績　南千束1000_F_90032189_a8Ze78vBSLe0cICQmP6TX2kiAYkHWVXw 1.jpg" alt="" class="hover-image">
+              <div class="item-text">
+                <h2>南千束３丁目 土地</h2>
+                <p>成約済／大田区／南道路／高台</p>
+                <p>日当たりの良い南公道面</p>
+                <p>洗足池公園や大岡山駅徒歩圏</p>
+                <p>洗足池小学校学区域</p>
+              </div>
+            </section>
+            <section class="item">
+              <img src="./assets/images/sales/実績　南品川1000_F_375313638_PkcP0LEcthf8vFQn5dynIKTQtfQArD77 1.jpg" alt="" class="hover-image">
+              <div class="item-text">
+                <h2>南品川５丁目 土地</h2>
+                <p>成約済／品川区／駅７分／ワイドスパン</p>
+                <p>「大井町」駅徒歩７分</p>
+                <p>近隣商業地域・３種高度地区</p>
+                <p>間口が広く解放感がある土地</p>
+              </div>
+            </section>
+          </div>
+
+          <a href="./about.html" class="pagelink">NEXT ABOUT US</a>
         </main>
+        <footer>
+          <a href="" data-letters="GET IN TOUCH" class="link-effect">GET IN TOUCH</a>
+          <section class="footer-section">
+            <section class="left-section">
+              <h2><img src="./assets/images/footer/footer-logo.png" alt="" /></h2>
+              <a href="">プライバシーポリシー</a>
+              <p>©TO PLACE株式会社</p>
+            </section>
+            <section class="right-section">
+              <dl>
+                <dt>事業内容</dt>
+                <dd>不動産ディベロップメント事業<br />
+                  不動産売買仲介事業
+                </dd>
+              </dl>
+              <dl>
+                <dt>宅建業免許</dt>
+                <dd>東京都知事（１）第１０９４０９号</dd>
+              </dl>
+              <dl>
+                
+                <dt>所在地</dt>
+                <dd>東京都渋谷区恵比寿１－８－６　共同ビル７階</dd>
+              </dl>
+                <dl>
+                  <dt>代表番号</dt>
+                  <dd>０３－６８２４－６３６８</dd>
+                </dl>
+            </section>
+          </section>
+        </footer>
 </body>
 </html>
