--- a/src/careers.html
+++ b/src/careers.html
@@ -86,7 +86,7 @@
                 </a>
               </li>
               <li>
-                <a class="text-stroke-fill-ltr" data-fill="GET IN TOUCH">GET IN TOUCH
+                <a href="mailto:info@to-place.co.jp" class="text-stroke-fill-ltr" data-fill="GET IN TOUCH">GET IN TOUCH
                   <div class="hover-reveal image01">
                     <img src="./assets/images/menu/menu-get.jpeg" alt="" class="hidden-img">
                   </div>
@@ -172,11 +172,11 @@
           </div>
         </main>
         <footer>
-          <a href="" data-letters="GET IN TOUCH" class="link-effect">GET IN TOUCH</a>
+          <a href="mailto:info@to-place.co.jp" data-letters="GET IN TOUCH" class="link-effect">GET IN TOUCH</a>
           <section class="footer-section">
             <section class="left-section">
               <h2><img src="./assets/images/footer/footer-logo.png" alt=""></h2>
-              <a href="">プライバシーポリシー</a>
+              <a href="./policy.html">プライバシーポリシー</a>
               <p>&copy;TO PLACE株式会社</p>
             </section>
             <section class="right-section">
