--- a/src/index.html
+++ b/src/index.html
@@ -274,5 +274,9 @@
             </section>
           </section>
         </footer>
+        <div class="cookie-consent">
+          <div class="cookie-text">当サイトではCookieを使用します。Cookieの使用に関する詳細は「<a href="./policy.html">プライバシーポリシー</a>」をご覧ください。</div>
+          <div class="cookie-agree">OK</div>
+        </div>
 </body>
 </html>
