--- a/src/sales.html
+++ b/src/sales.html
@@ -118,7 +118,9 @@
           </div>
           <div class="container">
             <section class="item">
-              <img src="./assets/images/sales/実績　日本橋久松町1000_F_495719911_sDr58fQLXDdjs2DHQughYJziQJKybiqv 1.jpg" alt="" class="hover-image">
+              <figure>
+                <img src="./assets/images/sales/実績　日本橋久松町1000_F_495719911_sDr58fQLXDdjs2DHQughYJziQJKybiqv 1.jpg" alt="" class="hover-image">
+              </figure>
               <div class="item-text">
                 <h2>日本橋久松町 土地</h2>
                 <p>成約済／中央区／駅５分／ワイドスパン</p>
@@ -129,7 +131,9 @@
               </div>
             </section>
             <section class="item">
-              <img src="./assets/images/sales/実績　恵比寿南1000_F_431325995_Z8hxlHVGfteYss0BGKIMnvJ7K2i8klC9 1.jpg" alt=""　class="hover-image">
+              <figure>
+                <img src="./assets/images/sales/実績　恵比寿南1000_F_431325995_Z8hxlHVGfteYss0BGKIMnvJ7K2i8klC9 1.jpg" alt=""　class="hover-image">
+              </figure>
               <div class="item-text">
                 <h2>恵比寿南３丁目 土地</h2>
                 <p>成約済／渋谷区／駅５分／高台</p>
@@ -139,7 +143,9 @@
               </div>
             </section>
             <section class="item">
-              <img src="./assets/images/sales/実績　森下1000_F_185776202_5hr0iZc55gjBfdcN9bkdYnDjGZRk36Sz 1.jpg" alt="" class="hover-image">
+              <figure>
+                <img src="./assets/images/sales/実績　森下1000_F_185776202_5hr0iZc55gjBfdcN9bkdYnDjGZRk36Sz 1.jpg" alt="" class="hover-image">
+              </figure>
               <div class="item-text">
                 <h2>森下２丁目 戸建</h2>
                 <p>成約済／江東区／駅１分</p>
@@ -149,7 +155,9 @@
               </div>
             </section>
             <section class="item">
-              <img src="./assets/images/sales/実績　南千束1000_F_90032189_a8Ze78vBSLe0cICQmP6TX2kiAYkHWVXw 1.jpg" alt="" class="hover-image">
+              <figure>
+                <img src="./assets/images/sales/実績　南千束1000_F_90032189_a8Ze78vBSLe0cICQmP6TX2kiAYkHWVXw 1.jpg" alt="" class="hover-image">
+              </figure>
               <div class="item-text">
                 <h2>南千束３丁目 土地</h2>
                 <p>成約済／大田区／南道路／高台</p>
@@ -159,7 +167,9 @@
               </div>
             </section>
             <section class="item">
-              <img src="./assets/images/sales/実績　南品川1000_F_375313638_PkcP0LEcthf8vFQn5dynIKTQtfQArD77 1.jpg" alt="" class="hover-image">
+              <figure>
+                <img src="./assets/images/sales/実績　南品川1000_F_375313638_PkcP0LEcthf8vFQn5dynIKTQtfQArD77 1.jpg" alt="" class="hover-image">
+              </figure>
               <div class="item-text">
                 <h2>南品川５丁目 土地</h2>
                 <p>成約済／品川区／駅７分／ワイドスパン</p>
