--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,21 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
+  <div class="container">
+    <button id="music-on">音楽ON</button>
+<button id="music-off">音楽OFF</button>
+
+    <div class="gradient-container">
+      <div class="gradient-canvas" id="color-base">
+        <div class="blobs-container">
+          <div class="blob" id="color-0">
+          <div class="blob" id="color-1">
+          <div class="blob" id="color-2">
+          <div class="blob" id="color-3">
+        </div>
+      </div>
+    </div>
+  </div>
     <div class="loader">
       <div id="countdown"></div>
       <div class="loader__bg"></div>
