--- a/src/sales.html
+++ b/src/sales.html
@@ -116,7 +116,7 @@
           <div class="business-info">
             <h2>販売実績</h2>
           </div>
-          <div class="container">
+          <div class="container02">
             <section class="item">
               <figure>
                 <img src="./assets/images/sales/実績　日本橋久松町1000_F_495719911_sDr58fQLXDdjs2DHQughYJziQJKybiqv 1.jpg" alt="" class="hover-image">
