--- a/src/index.html
+++ b/src/index.html
@@ -26,11 +26,11 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body class="no-scroll">
-  <div id="loading-screen" style="position: fixed; width: 100vw; height: 100vh; background: black; z-index: 9999999; display: flex; justify-content: center; align-items: center; color: white;">
+  <div id="loading-screen hidden" style="position: fixed; width: 100vw; height: 100vh; background: black; z-index: 9999999; display: none; justify-content: center; align-items: center; color: white;">
     <div id="loading-text">Loading... 0%</div>
-</div>
+  </div>
 
-  <div class="container">
+  <div class="container hidden">
     <div class="btn-wrapper">
       <h1>
         <img src="./assets/images/logo.svg" alt="TO PLACE株式会社">
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-    <div class="gradient-container">
+    <div class="gradient-container hidden">
       <div class="gradient-canvas" id="color-base">
         <div class="blobs-container">
           <div class="blob" id="color-0"></div>
