--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,7 @@
           </ul>
         </nav>
       </div>
-      <header>
+      <header class="header-top">
         <h1>
           <img src="./assets/images/logo.svg" alt="TO PLACE株式会社">
           TO PLACE
