エラー解消

--- a/src/business.html
+++ b/src/business.html
@@ -111,7 +111,7 @@
                 <li>OUR BUSINESS</li>
               </ol>
             </nav>
-            <img src="./assets/images/top/ourbusiness-hero.jpeg" alt="">
+            <img src="./assets/images/business/ourbusiness-hero.webp" alt="">
           </div>
           <div class="business-info">
             <h2>事業案内</h2>
