--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,9 @@
   <!-- Favicon -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
-<body class="no-scroll">
-  <div id="loading-screen hidden" style="position: fixed; width: 100vw; height: 100vh; background: black; z-index: 9999999; display: none; justify-content: center; align-items: center; color: white;">
-    <div id="loading-text">Loading... 0%</div>
+<body class="no-scroll index-page">
+  <div class="loading-screen hidden" style="position: fixed; width: 100vw; height: 100vh; background: black; z-index: 9999999; justify-content: center; align-items: center; color: white;">
+    <div class="loading-text">Loading... 0%</div>
   </div>
 
   <div class="container hidden">
@@ -196,7 +196,7 @@
                     </a>
                   </div>
               </div>
-              <img src="./assets/images/top/ourbusiness-hero.jpeg" alt="">
+              <img src="./assets/images/top/ourbusiness-hero.webp" alt="">
             </section>
             <section class="carousel-section">
                 <h2 class="text-effect">SALES RECORD</h2>
