--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,8 @@
         TO PLACE
       </h1>
       <div class="btn-wrapper-inner">
-        <button id="music-on">音楽ON</button>
-        <button id="music-off">音楽OFF</button>
+        <button id="music-on" type="button">MUSIC<br>ON</button>
+        <button id="music-off" type="button">MUSIC<br>OFF</button>
       </div>
     </div>
 
@@ -128,7 +128,23 @@
           <img src="./assets/images/logo.svg" alt="TO PLACE株式会社">
           TO PLACE
         </h1>
-        <button class="menu-btn"></button>
+        <div class="menu-wrapper">
+          <button class="menu-btn" type="button"></button>
+          <div class="sound-icon">
+            <div class="sound-wave">
+              <i class="bar"></i>
+              <i class="bar"></i>
+              <i class="bar"></i>
+              <i class="bar"></i>
+              <i class="bar"></i>
+              <i class="bar"></i>
+              <i class="bar"></i>
+              <i class="bar"></i>
+              <i class="bar"></i>
+              <i class="bar"></i>
+            </div>
+          </div>
+        </div>
       </header>
       <main class="top-main">
         <div class="light"></div>
