--- a/src/index.html
+++ b/src/index.html
@@ -177,20 +177,20 @@
               <ul class="news-list">
                 <li>
                   <img src="./assets/images/top/news-01.webp" alt="">
-                  <h3>プライバシポリシーの改訂</h3>
-                  <p>24-03-12<span class="new">NEW</span>プライバシポリシーを一部、改訂しました。</p>
+                  <h3 class="text-effect">プライバシポリシーの改訂</h3>
+                  <p class="text-effect">24-03-12<span class="new">NEW</span>プライバシポリシーを一部、改訂しました。</p>
                   <hr>
                 </li>
                 <li>
                   <img src="./assets/images/top/news-01.webp" alt="">
-                  <h3>求人、積極採用中</h3>
-                  <p>24-03-12<span class="new">NEW</span>求人情報を公開しました</p>
+                  <h3 class="text-effect">求人、積極採用中</h3>
+                  <p class="text-effect">24-03-12<span class="new">NEW</span>求人情報を公開しました</p>
                   <hr>
                 </li>
                 <li>
                   <img src="./assets/images/top/news-01.webp" alt="">
-                  <h3>自社サイト公開のお知らせ</h3>
-                  <p>24-03-01<span class="no-new"></span>WEBサイトを公開しました。</p>
+                  <h3 class="text-effect">自社サイト公開のお知らせ</h3>
+                  <p class="text-effect">24-03-01<span class="no-new"></span>WEBサイトを公開しました。</p>
                   <hr>
                 </li>
               </ul>
