JS修正アイコン修正中

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
   <!-- Favicon -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
-<body class="no-scroll index-page">
+<body class="no-scroll top-page">
   <div class="loading-screen" style="position: fixed; width: 100vw; height: 100vh; background: black; z-index: 9999999; justify-content: center; align-items: center; color: white;">
     <div class="loading-text">0%</div>
   </div>
