テキストアニメーション追加

--- a/src/careers.html
+++ b/src/careers.html
@@ -115,42 +115,42 @@
             <img src="./assets/images/careers/CAREERS 1000_F_114301517_XWUgZEG4CuvBQQZYjwjnKNbr84Lxfvx3.jpg" alt="">
           </div>
           <div class="careers-info">
-            <h2>採用情報</h2>
-            <p>渋谷区・新宿区・港区・中央区・千代田区などの東京都心部を中心とした東京２３区内の不動産情報を売買仲介会社様から取得し、マーケティング・現地調査・役所調査などを行う不動産仕入業務です。仕入れる物件は2億円程度までの不動産。今後は、事業拡大のため商業地などの収益用地も積極的に仕入れる予定です。</p>
+            <h2 class="text-effect">採用情報</h2>
+            <p class="text-effect">渋谷区・新宿区・港区・中央区・千代田区などの東京都心部を中心とした東京２３区内の不動産情報を売買仲介会社様から取得し、マーケティング・現地調査・役所調査などを行う不動産仕入業務です。仕入れる物件は2億円程度までの不動産。今後は、事業拡大のため商業地などの収益用地も積極的に仕入れる予定です。</p>
           <div class="container-section">
             <section class="text-section">
-              <h2>-仕事の流れ-</h2>
+              <h2 class="text-effect">-仕事の流れ-</h2>
               <ol>
-                <li>アプローチ</li>
-                <li>物件情報入手</li>
-                <li>物件現地調査・マーケティング</li>
-                <li>仕入事業計画書作成</li>
-                <li>稟議・買付</li>
-                <li>仕入契約</li>
-                <li>販売</li>
+                <li class="text-effect">アプローチ</li>
+                <li class="text-effect">物件情報入手</li>
+                <li class="text-effect">物件現地調査・マーケティング</li>
+                <li class="text-effect">仕入事業計画書作成</li>
+                <li class="text-effect">稟議・買付</li>
+                <li class="text-effect">仕入契約</li>
+                <li class="text-effect">販売</li>
               </ol>
-              <p>※協力販売会社に委託するので、自社での販売活動はありません。</p>
-              <h3>【応募要件】</h3>
+              <p class="text-effect">※協力販売会社に委託するので、自社での販売活動はありません。</p>
+              <h3 class="text-effect">【応募要件】</h3>
               <p>販売等の接客業・その他営業の経験がある方</p>
-              <h3>【歓迎要件】</h3>
-              <p>不動産業界経験者・宅地建物取引士の資格をお持ちの方</p>
-              <h3>【想定年収】</h3>
-              <h4>仕入営業未経験者</h4>
-              <p>月給２８万円～ + 報奨金（利益の5%～、契約を重ねる毎に利率がUP）</p>
-              <h4>仕入営業経験者</h4>
-              <p>月給　応相談　※遠慮なくご希望を提示してください</p>
-              <p>〇宅建有資格者　月給に２万円加算</p>
-              <h3>【諸手当】</h3>
-              <p>資格手当（宅地建物取引士：月２万円）<br>交通費全額支給</p>
-              <h3>【勤務時間】</h3>
-              <p>9:00〜18:00（実働8時間）</p>
-              <h3>【勤務地】</h3>
-              <p>恵比寿本社</p>
-              <h3>【最寄り駅】</h3>
-              <p>JR山手線・JR埼京線「恵比寿」駅　徒歩１分<br>
+               <h3 class="text-effect">【歓迎要件】</h3>
+              <p class="text-effect">不動産業界経験者・宅地建物取引士の資格をお持ちの方</p>
+               <h3 class="text-effect">【想定年収】</h3>
+              <h4 class="text-effect">仕入営業未経験者</h4>
+              <p class="text-effect">月給２８万円～ + 報奨金（利益の5%～、契約を重ねる毎に利率がUP）</p>
+              <h4 class="text-effect">仕入営業経験者</h4>
+              <p class="text-effect">月給　応相談　※遠慮なくご希望を提示してください</p>
+              <p class="text-effect">〇宅建有資格者　月給に２万円加算</p>
+               <h3 class="text-effect">【諸手当】</h3>
+              <p class="text-effect">資格手当（宅地建物取引士：月２万円）<br>交通費全額支給</p>
+               <h3 class="text-effect">【勤務時間】</h3>
+              <p class="text-effect">9:00〜18:00（実働8時間）</p>
+               <h3 class="text-effect">【勤務地】</h3>
+              <p class="text-effect">恵比寿本社</p>
+               <h3 class="text-effect">【最寄り駅】</h3>
+              <p class="text-effect">JR山手線・JR埼京線「恵比寿」駅　徒歩１分<br>
                 日比谷線「恵比寿」駅　徒歩２分</p>
-              <h3>【選考プロセス】</h3>
-              <p>応募　→　書類選考　→　面談　→　内定</p>
+               <h3 class="text-effect">【選考プロセス】</h3>
+              <p class="text-effect">応募　→　書類選考　→　面談　→　内定</p>
             </section>
             <section class="image-section">
               <div class="img">
