--- a/src/about.html
+++ b/src/about.html
@@ -126,17 +126,17 @@
             <img src="./assets/images/about/ABOUT US 1000_F_727626068_utpzhkAImFUFUslkZoV9MYufyv15VRb4.jpg" alt="">
           </div>
           <div class="about-info">
-            <h2>会社概要</h2>
-            <h3>ご挨拶</h3>
-            <p>大学卒業後、不動産業界に飛び込み22年。東京の都心エリアを中心に、土地・戸建・マンションの売買仲介業、収益不動産・戸建て用地の買取・企画・分譲と、多くの経験を積み重ねてきました。</p>
-            <p>この22年を振り返ってみれば、リーマンショックや東日本大震災、コロナショック等、様々な困難がありました。そんな中で、大きな壁を乗り越えて今日に至っておりますのは、たくさんのお客様をはじめ、取引先各社様の支えがあったからに他なりません。この場をお借りしまして心より御礼申し上げます。昨今のインフレにより物価が上昇、お金の価値が相対的に下がっています。しかしこの影響を受けにくいのが現物資産である不動産です。</p>
-            <p>当社は、駅近・公園や商店街の至近・人気の小学校区域内など、資産性の高い不動産に特化した買取・分譲事業を展開しています。豊かな暮らしと価値のある不動産を提供することを使命とし、業界経験20年以上のプロフェッショナルとして、みなさまに信頼を頂けるように精進していきたく思っています。</p>
+            <h2 class="text-effect">会社概要</h2>
+            <h3 class="text-effect">ご挨拶</h3>
+            <p class="text-effect">大学卒業後、不動産業界に飛び込み22年。東京の都心エリアを中心に、土地・戸建・マンションの売買仲介業、収益不動産・戸建て用地の買取・企画・分譲と、多くの経験を積み重ねてきました。</p>
+            <p class="text-effect">この22年を振り返ってみれば、リーマンショックや東日本大震災、コロナショック等、様々な困難がありました。そんな中で、大きな壁を乗り越えて今日に至っておりますのは、たくさんのお客様をはじめ、取引先各社様の支えがあったからに他なりません。この場をお借りしまして心より御礼申し上げます。昨今のインフレにより物価が上昇、お金の価値が相対的に下がっています。しかしこの影響を受けにくいのが現物資産である不動産です。</p>
+            <p class="text-effect">当社は、駅近・公園や商店街の至近・人気の小学校区域内など、資産性の高い不動産に特化した買取・分譲事業を展開しています。豊かな暮らしと価値のある不動産を提供することを使命とし、業界経験20年以上のプロフェッショナルとして、みなさまに信頼を頂けるように精進していきたく思っています。</p>
           </div>
           <div class="about-info2-wrapper">
             <div class="about-info2">
               <dl>
-                <dt>商号</dt>
-                <dd>TO PLACE株式会社</dd>
+                <dt class="text-effect">商号</dt>
+                <dd class="text-effect">TO PLACE株式会社</dd>
               </dl>
               <dl>
                 <dt>代表者</dt>
