--- a/src/policy.html
+++ b/src/policy.html
@@ -106,37 +106,37 @@
       <main class="top-main">
         <div class="light"></div>
         <div class="wrapper">
-            <h2>プライバシーポリシー</h2>
+            <h2 class="text-effect">プライバシーポリシー</h2>
     
-            <p>TO PLACE株式会社（以下「当社」といいます。）は、当社がTO PLACE株式会社のサイト
+            <p class="text-effect">TO PLACE株式会社（以下「当社」といいます。）は、当社がTO PLACE株式会社のサイト
             利用（以下「本サービス」といいます。）を提供するにあたり、ご利用される皆様（以下「利用
             者」といいます。）の個人に関する情報（以下「個人情報」といいます。）を取得します。</p>
-            <p>第1条 （適用範囲）</p>
-            <p>本プライバシーポリシー（以下「本ポリシー」といいます。）は、当社が利用者から個人
+           <p class="text-effect">第1条 （適用範囲）</p>
+           <p class="text-effect">本プライバシーポリシー（以下「本ポリシー」といいます。）は、当社が利用者から個人
             情報を取得、利用及び管理するときに適用されます。</p>
-            <p>第2条 （取得する情報）<p>
-            <p>当社は、利用者から以下の情報を取得します。</p>
-            <p>(1) 氏名</p>
-            <p>(2) 住所</p>
-            <p>(3) 生年月日</p>
-            <p>(4) 年齢</p>
-            <p>(5) 連絡先</p>
-            <p>(6) 位置情報</p>
-            <p>(7) IPアドレス</p>
-            <p>(8) 閲覧したURL及び日時に関するタイムスタンプ</p>
-            <p>第3条 （利用目的）</p>
-            <p>当社が個人情報を収集・利用する目的は、以下のとおりです。<p>
-            <p>(1) 本サービスの提供・運営のため</p>
-            <p>(2) 本サービスに関する新機能、更新情報をお知らせするため</p>
-            <p>(3) メールマガジンの送信、ダイレクトメールの送付のため</p>
-            <p>(4) 広告効果の分析、市場分析、マーケティングのため</p>
-            <p>(5) 本サービスの各種問合せ、アフターサービス対応のため</p>
-            <p>(6) 不正アクセス、不正利用の防止のため</p>
-            <p>(7) 本サービスその他のコンテンツの開発・改善のため</p>
-            <p>(8) 当社が実施するサービス又は企画に関する連絡のため</p>
-            <p>(9) 上記の利用目的に付随する目的</p>
-            <p>第4条 （Cookieの利用）</p>
-            <p>当社は、ウェブサイト及び本サービス（以下、これらを総称して「ウェブサイト等」といい
+           <p class="text-effect">第2条 （取得する情報）<p>
+           <p class="text-effect">当社は、利用者から以下の情報を取得します。</p>
+           <p class="text-effect">(1) 氏名</p>
+           <p class="text-effect">(2) 住所</p>
+           <p class="text-effect">(3) 生年月日</p>
+           <p class="text-effect">(4) 年齢</p>
+           <p class="text-effect">(5) 連絡先</p>
+           <p class="text-effect">(6) 位置情報</p>
+           <p class="text-effect">(7) IPアドレス</p>
+           <p class="text-effect">(8) 閲覧したURL及び日時に関するタイムスタンプ</p>
+           <p class="text-effect">第3条 （利用目的）</p>
+           <p class="text-effect">当社が個人情報を収集・利用する目的は、以下のとおりです。<p>
+           <p class="text-effect">(1) 本サービスの提供・運営のため</p>
+           <p class="text-effect">(2) 本サービスに関する新機能、更新情報をお知らせするため</p>
+           <p class="text-effect">(3) メールマガジンの送信、ダイレクトメールの送付のため</p>
+           <p class="text-effect">(4) 広告効果の分析、市場分析、マーケティングのため</p>
+           <p class="text-effect">(5) 本サービスの各種問合せ、アフターサービス対応のため</p>
+           <p class="text-effect">(6) 不正アクセス、不正利用の防止のため</p>
+           <p class="text-effect">(7) 本サービスその他のコンテンツの開発・改善のため</p>
+           <p class="text-effect">(8) 当社が実施するサービス又は企画に関する連絡のため</p>
+           <p class="text-effect">(9) 上記の利用目的に付随する目的</p>
+           <p class="text-effect">第4条 （Cookieの利用）</p>
+           <p class="text-effect">当社は、ウェブサイト及び本サービス（以下、これらを総称して「ウェブサイト等」といい
             ます。）のアクセス及び利用状況の分析、広告配信並びにウェブサイト等の利便性向上
             のために、ウェブサイト等にアクセスした利用者の情報通信端末に保存されるCookie等
             のファイル及びこれに類似する技術を取得することがあります。当社は、Cookie等と利
@@ -146,71 +146,71 @@
             ネジメント・プラットフォームに提供し、当該第三者からCookie等により収集されたウェブ
             の閲覧履歴及びその分析結果を取得し、これらを利用者の個人データと結び付けた上
             で、広告配信等の目的で利用することがあります。</p>
-            <p>第5条 （安全確保の措置）</p>
-            <p>当社は、収集した情報の漏えい、滅失又はき損の防止その他収集した情報の適切な
+           <p class="text-effect">第5条 （安全確保の措置）</p>
+           <p class="text-effect">当社は、収集した情報の漏えい、滅失又はき損の防止その他収集した情報の適切な
             管理のために必要な措置を講じます。当社が、安全管理のために講じた措置の概要は
             以下のとおりです。措置の具体的内容については、本ポリシーで定める窓口に対する
             利用者からの求めに応じて遅滞なく回答いたします。</p>
-            <p>(1) 基本方針の策定、個人情報の取扱いに係る規律の整備</p>
-            <p>(2) 個人情報の取扱責任者や報告連絡体制の整備</p>
-            <p>(3) 定期的な研修の実施</p>
-            <p>(4) 個人情報についての秘密保持に関する誓約を従業者から取得</p>
-            <p>(5) 個人情報についての秘密保持に関する事項を就業規則に記載</p>
-            <p>(6) 責任者以外個人情報を容易に閲覧できないような措置（間仕切りやICカードに
+           <p class="text-effect">(1) 基本方針の策定、個人情報の取扱いに係る規律の整備</p>
+           <p class="text-effect">(2) 個人情報の取扱責任者や報告連絡体制の整備</p>
+           <p class="text-effect">(3) 定期的な研修の実施</p>
+           <p class="text-effect">(4) 個人情報についての秘密保持に関する誓約を従業者から取得</p>
+           <p class="text-effect">(5) 個人情報についての秘密保持に関する事項を就業規則に記載</p>
+           <p class="text-effect">(6) 責任者以外個人情報を容易に閲覧できないような措置（間仕切りやICカードに
             よる入退室管理等も含む）の実施</p>
-            <p>(7) 個人情報を取り扱う機器等の盗難紛失等を防止するための措置（機器の書庫
+           <p class="text-effect">(7) 個人情報を取り扱う機器等の盗難紛失等を防止するための措置（機器の書庫
             への保管、パスワードの設定等を含む）を実施</p>
-            <p>(8) 個人情報を取り扱うことのできる機器やアクセス権者を明確にし、個人情報へ
+           <p class="text-effect">(8) 個人情報を取り扱うことのできる機器やアクセス権者を明確にし、個人情報へ
             の不要なアクセスを防止</p>
-            <p>(9) メール等により取扱う際に、パスワードを設定</p>
-            <p>(10) 個人情報を取り扱う機器等のOSを最新の状態に保持</p>
-            <p>(11) 個人情報を取り扱う機器等にセキュリティ対策ソフトウェア等を導入</p>
-            <p>第6条 （個人情報の第三者への提供）</p>
-            <p>1 当社は、次に掲げる場合を除いて、あらかじめ利用者の同意を得ないで、取得した
+           <p class="text-effect">(9) メール等により取扱う際に、パスワードを設定</p>
+           <p class="text-effect">(10) 個人情報を取り扱う機器等のOSを最新の状態に保持</p>
+           <p class="text-effect">(11) 個人情報を取り扱う機器等にセキュリティ対策ソフトウェア等を導入</p>
+           <p class="text-effect">第6条 （個人情報の第三者への提供）</p>
+           <p class="text-effect">1 当社は、次に掲げる場合を除いて、あらかじめ利用者の同意を得ないで、取得した
             個人情報を第三者に提供することはありません。</p>
-            <p>(1) 法令に基づく場合</p>
-            <p>(2) 人の生命、身体又は財産の保護のために必要がある場合であって、利用者の
+           <p class="text-effect">(1) 法令に基づく場合</p>
+           <p class="text-effect">(2) 人の生命、身体又は財産の保護のために必要がある場合であって、利用者の
             同意を得ることが困難であるとき。</p>
-            <p>(3) 公衆衛生の向上又は児童の健全な育成の推進のために特に必要がある場合
+           <p class="text-effect">(3) 公衆衛生の向上又は児童の健全な育成の推進のために特に必要がある場合
             であって、利用者の同意を得ることが困難であるとき。</p>
-            <p>(4) 国の機関若しくは地方公共団体又はその委託を受けた者が法令の定める事務
+           <p class="text-effect">(4) 国の機関若しくは地方公共団体又はその委託を受けた者が法令の定める事務
             を遂行することに対して協力する必要がある場合であって、利用者の同意を得
             ることにより当該事務の遂行に支障を及ぼすおそれがあるとき。</p>
-            <p>(5) その他法令で第三者提供の制限の例外が認められている場合</p>
-            <p>2 前項の定めにかかわらず、次に掲げる場合には、当該個人情報の提供先は第三
+           <p class="text-effect">(5) その他法令で第三者提供の制限の例外が認められている場合</p>
+           <p class="text-effect">2 前項の定めにかかわらず、次に掲げる場合には、当該個人情報の提供先は第三
             者に該当しないものとします。</p>
-            <p>(1) 当社が利用目的の達成に必要な範囲内において個人情報の取扱いの全部又
+           <p class="text-effect">(1) 当社が利用目的の達成に必要な範囲内において個人情報の取扱いの全部又
             は一部を委託することに伴って当該個人情報が提供される場合</p>
-            <p>(2) 合併その他の事由による事業の承継に伴って個人情報が提供される場合</p>
-            <p>(3) 第7条に定める共同利用者に対して提供される場合</p>
-            <p>第7条 （個人情報の共同利用）</p>
-            <p>当社は、特定の者との間で共同利用することを目的として個人情報を当該特定の者
+           <p class="text-effect">(2) 合併その他の事由による事業の承継に伴って個人情報が提供される場合</p>
+           <p class="text-effect">(3) 第7条に定める共同利用者に対して提供される場合</p>
+           <p class="text-effect">第7条 （個人情報の共同利用）</p>
+           <p class="text-effect">当社は、特定の者との間で共同利用することを目的として個人情報を当該特定の者
             に提供することがあります。この場合、当社は、あらかじめ、共同して利用する個人情報
             の項目、共同して利用する者の範囲、利用する者の利用目的及び当該個人情報の管
             理について責任を有する者の氏名又は名称及び住所並びに法人にあっては、その代
             表者の氏名を公表するものとします。</p>
-            <p>第8条 （本プライバシーポリシーの変更）</p>
-            <p>当社は、法令改正への対応の必要性及び事業上の必要性に応じて、本ポリシーを
+           <p class="text-effect">第8条 （本プライバシーポリシーの変更）</p>
+           <p class="text-effect">当社は、法令改正への対応の必要性及び事業上の必要性に応じて、本ポリシーを
             変更する場合があります。本ポリシーの変更を行った場合には、本ウェブサイト上に掲
             載します。</p>
-            <p>第9条 （開示、訂正等の手続）</p>
-            <p>1 利用者は、本条及び当社の関連規程に従って、当社に対し、個人情報保護法にお
+           <p class="text-effect">第9条 （開示、訂正等の手続）</p>
+           <p class="text-effect">1 利用者は、本条及び当社の関連規程に従って、当社に対し、個人情報保護法にお
             いて認められる限度で、以下の求め又は請求を行うことができます。</p>
-            <p>(1) 個人情報の利用目的の通知の求め</p>
-            <p>(2) 個人情報又は第三者提供記録の開示の請求</p>
-            <p>(3) 個人情報の訂正、追加又は削除の請求</p>
-            <p>(4) 個人情報の利用の停止の請求</p>
-            <p>(5) 個人情報の第三者への提供の停止の請求</p>
-            <p>2 前項の求め又は請求にあたっては、同項各号のうちいずれの請求か特定の上、本
+           <p class="text-effect">(1) 個人情報の利用目的の通知の求め</p>
+           <p class="text-effect">(2) 個人情報又は第三者提供記録の開示の請求</p>
+           <p class="text-effect">(3) 個人情報の訂正、追加又は削除の請求</p>
+           <p class="text-effect">(4) 個人情報の利用の停止の請求</p>
+           <p class="text-effect">(5) 個人情報の第三者への提供の停止の請求</p>
+           <p class="text-effect">2 前項の求め又は請求にあたっては、同項各号のうちいずれの請求か特定の上、本
             人確認のための書類（運転免許証、健康保険証、住民票の写し等）をご提出頂きま
             す。</p>
-            <p>第10条 （お問い合わせ）</p>
-            <p>当社の個人情報の取扱いに関するご相談や苦情等のお問い合わせについては、下
+           <p class="text-effect">第10条 （お問い合わせ）</p>
+           <p class="text-effect">当社の個人情報の取扱いに関するご相談や苦情等のお問い合わせについては、下
             記の窓口にご連絡ください。</p>
-            <p>個人情報取扱事業者：TO PLACE株式会社</p>
-            <p>代表者名：坂本　絢子</p>
-            <p>住所：東京都渋谷区恵比寿1-8-6　共同ビル7階</p>
-            <p>Eメールアドレス：info@to-place.co.jp</p>
+           <p class="text-effect">個人情報取扱事業者：TO PLACE株式会社</p>
+           <p class="text-effect">代表者名：坂本　絢子</p>
+           <p class="text-effect">住所：東京都渋谷区恵比寿1-8-6　共同ビル7階</p>
+           <p class="text-effect">Eメールアドレス：info@to-place.co.jp</p>
         </div>
             
           </main>
