--- a/src/sales.html
+++ b/src/sales.html
@@ -114,7 +114,7 @@
             <img src="./assets/images/sales/Group 19.png" alt="" />
           </div>
           <div class="business-info">
-            <h2>販売実績</h2>
+            <h2 class="text-effect">販売実績</h2>
           </div>
           <div class="container02">
             <section class="item">
@@ -122,12 +122,12 @@
                 <img src="./assets/images/sales/実績　日本橋久松町1000_F_495719911_sDr58fQLXDdjs2DHQughYJziQJKybiqv 1.jpg" alt="" class="hover-image">
               </figure>
               <div class="item-text">
-                <h2>日本橋久松町 土地</h2>
-                <p>成約済／中央区／駅５分／ワイドスパン</p>
-                <p>「人形町」駅徒歩５分・複数路線利用可</p>
-                <p>久松小学校学区域</p>
-                <p>土地間口が広く開放感がある</p>
-                <p>下町と都会が共存した活気ある街並み</p>
+                <h2 class="text-effect">日本橋久松町 土地</h2>
+                <p class="text-effect">成約済／中央区／駅５分／ワイドスパン</p>
+                <p class="text-effect">「人形町」駅徒歩５分・複数路線利用可</p>
+                <p class="text-effect">久松小学校学区域</p>
+                <p class="text-effect">土地間口が広く開放感がある</p>
+                <p class="text-effect">下町と都会が共存した活気ある街並み</p>
               </div>
             </section>
             <section class="item">
@@ -135,11 +135,11 @@
                 <img src="./assets/images/sales/実績　恵比寿南1000_F_431325995_Z8hxlHVGfteYss0BGKIMnvJ7K2i8klC9 1.jpg" alt=""　class="hover-image">
               </figure>
               <div class="item-text">
-                <h2>恵比寿南３丁目 土地</h2>
-                <p>成約済／渋谷区／駅５分／高台</p>
-                <p>「代官山」「恵比寿」駅が徒歩５分</p>
-                <p>静かな高台の立地</p>
-                <p>コンビニや飲食店が立ち並ぶ駒沢通り至近</p>
+                <h2 class="text-effect">恵比寿南３丁目 土地</h2>
+                <p class="text-effect">成約済／渋谷区／駅５分／高台</p>
+                <p class="text-effect">「代官山」「恵比寿」駅が徒歩５分</p>
+                <p class="text-effect">静かな高台の立地</p>
+                <p class="text-effect">コンビニや飲食店が立ち並ぶ駒沢通り至近</p>
               </div>
             </section>
             <section class="item">
@@ -147,11 +147,11 @@
                 <img src="./assets/images/sales/実績　森下1000_F_185776202_5hr0iZc55gjBfdcN9bkdYnDjGZRk36Sz 1.jpg" alt="" class="hover-image">
               </figure>
               <div class="item-text">
-                <h2>森下２丁目 戸建</h2>
-                <p>成約済／江東区／駅１分</p>
-                <p>「森下」駅徒歩１分</p>
-                <p>繁華街が近い・静かな立地</p>
-                <p>近くに緑道や神社があり風情がある街並み</p>
+                <h2 class="text-effect">森下２丁目 戸建</h2>
+                <p class="text-effect">成約済／江東区／駅１分</p>
+                <p class="text-effect">「森下」駅徒歩１分</p>
+                <p class="text-effect">繁華街が近い・静かな立地</p>
+                <p class="text-effect">近くに緑道や神社があり風情がある街並み</p>
               </div>
             </section>
             <section class="item">
@@ -159,11 +159,11 @@
                 <img src="./assets/images/sales/実績　南千束1000_F_90032189_a8Ze78vBSLe0cICQmP6TX2kiAYkHWVXw 1.jpg" alt="" class="hover-image">
               </figure>
               <div class="item-text">
-                <h2>南千束３丁目 土地</h2>
-                <p>成約済／大田区／南道路／高台</p>
-                <p>日当たりの良い南公道面</p>
-                <p>洗足池公園や大岡山駅徒歩圏</p>
-                <p>洗足池小学校学区域</p>
+                <h2 class="text-effect">南千束３丁目 土地</h2>
+                <p class="text-effect">成約済／大田区／南道路／高台</p>
+                <p class="text-effect">日当たりの良い南公道面</p>
+                <p class="text-effect">洗足池公園や大岡山駅徒歩圏</p>
+                <p class="text-effect">洗足池小学校学区域</p>
               </div>
             </section>
             <section class="item">
@@ -171,11 +171,11 @@
                 <img src="./assets/images/sales/実績　南品川1000_F_375313638_PkcP0LEcthf8vFQn5dynIKTQtfQArD77 1.jpg" alt="" class="hover-image">
               </figure>
               <div class="item-text">
-                <h2>南品川５丁目 土地</h2>
-                <p>成約済／品川区／駅７分／ワイドスパン</p>
-                <p>「大井町」駅徒歩７分</p>
-                <p>近隣商業地域・３種高度地区</p>
-                <p>間口が広く解放感がある土地</p>
+                <h2 class="text-effect">南品川５丁目 土地</h2>
+                <p class="text-effect">成約済／品川区／駅７分／ワイドスパン</p>
+                <p class="text-effect">「大井町」駅徒歩７分</p>
+                <p class="text-effect">近隣商業地域・３種高度地区</p>
+                <p class="text-effect">間口が広く解放感がある土地</p>
               </div>
             </section>
           </div>
