--- a/src/index.html
+++ b/src/index.html
@@ -124,10 +124,12 @@
         </nav>
       </div>
       <header class="header-top">
-        <h1>
-          <img src="./assets/images/logo.svg" alt="TO PLACE株式会社">
-          TO PLACE
-        </h1>
+        <a href="#">
+          <h1>
+            <img src="./assets/images/logo.svg" alt="TO PLACE株式会社">
+            TO PLACE
+          </h1>
+        </a>
         <div class="menu-wrapper">
           <button class="menu-btn" type="button"></button>
           <div class="sound-icon">
