animation位置調整中

--- a/src/index.html
+++ b/src/index.html
@@ -178,7 +178,11 @@
               <h2 class="text-effect">NEWS RELEASE</h2>
               <ul class="news-list">
                 <li>
-                  <img src="./assets/images/top/news-01.webp" alt="">
+                  <div class="news-img-wrapper">
+                    <div class="img-overlay img-overlay-bgcolor"></div>
+                    <div class="img-overlay img-overlay-black"></div>
+                      <img src="./assets/images/top/news-01.webp" alt="">
+                  </div>
                   <h3 class="text-effect">プライバシポリシーの改訂</h3>
                   <p class="text-effect">24-03-12<span class="new">NEW</span>プライバシポリシーを一部、改訂しました。</p>
                   <hr>
