アニメーション調整中

--- a/src/index.html
+++ b/src/index.html
@@ -188,13 +188,21 @@
                   <hr>
                 </li>
                 <li>
-                  <img src="./assets/images/top/news-01.webp" alt="">
+                  <div class="news-img-wrapper">
+                    <div class="img-overlay img-overlay-bgcolor"></div>
+                    <div class="img-overlay img-overlay-black"></div>
+                      <img src="./assets/images/top/news-01.webp" alt="">
+                  </div>
                   <h3 class="text-effect">求人、積極採用中</h3>
                   <p class="text-effect">24-03-12<span class="new">NEW</span>求人情報を公開しました</p>
                   <hr>
                 </li>
                 <li>
-                  <img src="./assets/images/top/news-01.webp" alt="">
+                  <div class="news-img-wrapper">
+                    <div class="img-overlay img-overlay-bgcolor"></div>
+                    <div class="img-overlay img-overlay-black"></div>
+                      <img src="./assets/images/top/news-01.webp" alt="">
+                  </div>
                   <h3 class="text-effect">自社サイト公開のお知らせ</h3>
                   <p class="text-effect">24-03-01<span class="no-new"></span>WEBサイトを公開しました。</p>
                   <hr>
@@ -218,7 +226,11 @@
                     </a>
                   </div>
               </div>
-              <img src="./assets/images/top/ourbusiness-hero.webp" alt="">
+              <div class="ourbusiness-img-wrapper">
+                <div class="img-overlay our-img-overlay-bgcolor"></div>
+                <div class="img-overlay our-img-overlay-black"></div>
+                  <img src="./assets/images/top/ourbusiness-hero.webp" alt="">
+              </div>
             </section>
             <section class="carousel-section">
                 <h2 class="text-effect">SALES RECORD</h2>
