--- a/src/careers.html
+++ b/src/careers.html
@@ -115,7 +115,7 @@
             <img src="./assets/images/careers/careers-hero.webp" alt="採用情報ヒーロー画像|TO PLACE株式会社">
           </div>
           <div class="careers-info">
-            <h2 class="text-effect">採用情報</h2>
+            <h2 class="text-effect">採用情報-仕入れ営業-</h2>
             <p class="text-effect">渋谷区・新宿区・港区・中央区・千代田区などの東京都心部を中心とした東京２３区内の不動産情報を売買仲介会社様から取得し、マーケティング・現地調査・役所調査などを行う不動産仕入業務です。仕入れる物件は2億円程度までの不動産。今後は、事業拡大のため商業地などの収益用地も積極的に仕入れる予定です。</p>
           <div class="container-section">
             <section class="text-section">
