--- a/src/index.html
+++ b/src/index.html
@@ -4,26 +4,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <meta name="description" content="ページの説明">
-  <meta name="keywords" content="キーワード1, キーワード2, キーワード3">
-  <meta name="author" content="著者名">
+  <title>TO PLACE株式会社|TOPページ</title>
+  <meta name="description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
+  <meta name="author" content="TO PLACE株式会社">
   <meta name="robots" content="index, follow">
   <!-- Facebook Meta Tags -->
-  <meta property="og:title" content="ページのタイトル">
-  <meta property="og:description" content="ページの説明">
-  <meta property="og:image" content="画像のURL">
-  <meta property="og:url" content="ページのURL">
+  <meta property="og:title" content="TO PLACE株式会社">
+  <meta property="og:description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
+  <meta property="og:image" content="./assets/images/top/hero-image-01.webp">
+  <meta property="og:url" content="https://to-place.co.jp">
   <meta property="og:type" content="website">
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="ページのタイトル">
-  <meta name="twitter:description" content="ページの説明">
-  <meta name="twitter:image" content="画像のURL">
+  <meta name="twitter:title" content="TO PLACE株式会社">
+  <meta name="twitter:description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
+  <meta name="twitter:image" content="./assets/images/top/hero-image-01.webp">
   <!-- Canonical URL -->
-  <link rel="canonical" href="正規URL">
+  <link rel="canonical" href="https://to-place.co.jp">
   <!-- Favicon -->
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./assets/images/toplace-favicon.ico" type="image/x-icon">
 </head>
 <body class="no-scroll top-page">
   <div class="loading-screen" style="position: fixed; width: 100vw; height: 100vh; background: black; z-index: 9999999; justify-content: center; align-items: center; color: white;">
